@@ -13,6 +13,7 @@
     + Compact menu layout (per-user setting, showing only icons);
     + Network to network static nat;
     + Selectable logo size (from config.php) (#952);
+    + Added default option for permissions propagations (#1351);
     + API:
         + Encrypyted requests can now also be form-encoded (#1191);
     + New resolve hostnames option for subnet (#1222):
@@ -38,7 +39,8 @@
     + Fixed CSRF error when moving orphaned addresses (#1303);
     + Fixed VRF fetching via API by Id;
     + Fixed map issues when quotes are in name/description (#1384);
-    + Fidex item not removed from NAT when deleted (#1378);
+    + Fixed item not removed from NAT when deleted (#1378);
+    + Fixed Error when error_reporting = E_ALL about strict standards when importing IP addresses (#1372);
 
 == 1.3
 
